# alias-recommendation

./: .gitignore  README.md  pyproject.toml
planning/: hooks.md
src/: alias_generation.py  alias_hook.zsh  generate.py  get_current_alias.py  get_history.py  process_alias_input.py  setup_history.py  suggest_real_time.py  suggest_real_time.zsh
src/alias-recommendation_xydxydxyd/: get_history.py  process_alias_input.py  suggest_real_time.py
src/alias_recommendation_xydxydxyd/: PKGBUILD  alias_hook.zsh  alias_io.py  generate.py  get_history.py  process_alias_command.py  process_alias_input.py  suggest_real_time.py
tests/: README.md
