[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alias_recommendation_xydxydxyd"
version = "0.0.1"
authors = [
  { name="Eric Xu", email="xydxydxyd1@gmail.com" },
]
description = "Suggests aliases for commonly used commands in your daily use"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xydxydxyd1/alias-recommendation"
Issues = "https://github.com/xydxydxyd1/alias-recommendation/issues"

[project.scripts]
suggest-alias = "alias-recommendation_xydxydxyd:suggest_real_time"
